[package]
name = "rust-cloud-config-client"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
license = "MIT"
description = "Async Rust client for Spring Cloud Config Server"
readme = "README.md"
repository = "https://github.com/sansob/rust-cloud-config-client"
homepage = "https://github.com/sansob/rust-cloud-config-client"
documentation = "https://docs.rs/rust-cloud-config-client"
keywords = ["spring", "config", "cloud", "client", "rust"]
categories = ["config", "web-programming::http-client"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["http2", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
toml = "0.8"

[dev-dependencies]
temp-env = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
wiremock = "0.6"
